# Gitch

./: .env  pyproject.toml  test-driver-version.py
.wdm/: drivers.json
gitch/: cli.py  core.py  devlog-poster.py  devlog_poster.py  maintest.py
tests/: test_cli.py
