[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitch"
version = "0.1.0"
description = "A CLI tool to post devlogs to itch.io when making git commits"
authors = [
    { name="Your Name", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "selenium",
]

[project.scripts]
gitch = "gitch.cli:app"
